@@ -1,3 +1,9 @@
+2009-11-19  Tatsuya BIZENN  <bizenn@kahua.org>
+
+	* Change: dbd_mysqllib.stub, dbd/mysql.scm
+	  add mysql-use-result, mysql-get-ssl-cipher, mysql-ssl-set,
+	  but not yet tests.
+
 2009-11-18  Tatsuya BIZENN  <bizenn@kahua.org>
 
 	* Change: dbd_mysqllib.stub, dbd_mysql.c, mysql_mysql.h,
